// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Component should render correctly 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "justifyContent": "center",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onBlur={[MockFunction]}
      onChangeText={[Function]}
      onSubmitEditing={[MockFunction]}
      placeholder="Enter your user name"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "fontFamily": "Inter_500Medium",
            "fontSize": 15,
            "lineHeight": 16,
            "paddingVertical": 15,
            "width": "100%",
          },
          Object {},
        ]
      }
      underlineColorAndroid="transparent"
      value="user name"
    />
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "position": "absolute",
            "right": 0,
            "width": 20,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`TextInput Component should render placeholder 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "justifyContent": "center",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onBlur={[MockFunction]}
      onChangeText={[Function]}
      onSubmitEditing={[MockFunction]}
      placeholder="Enter your username"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "fontFamily": "Inter_500Medium",
            "fontSize": 15,
            "lineHeight": 16,
            "paddingVertical": 15,
            "width": "100%",
          },
          Object {},
        ]
      }
      underlineColorAndroid="transparent"
      value="user name"
    />
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "position": "absolute",
            "right": 0,
            "width": 20,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`TextInput Component should render with label correctly 1`] = `
<View
  style={
    Object {
      "width": "100%",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
          "color": "#8F959E",
          "fontFamily": "Inter_400Regular",
          "fontSize": 13,
          "lineHeight": 14,
        },
        Object {},
      ]
    }
  >
    Username
  </Text>
  <View
    style={
      Object {
        "justifyContent": "center",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onBlur={[MockFunction]}
      onChangeText={[Function]}
      onSubmitEditing={[MockFunction]}
      placeholder="Enter your user name"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Object {
            "fontFamily": "Inter_500Medium",
            "fontSize": 15,
            "lineHeight": 16,
            "paddingVertical": 15,
            "width": "100%",
          },
          Object {},
        ]
      }
      underlineColorAndroid="transparent"
      value="user name"
    />
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "position": "absolute",
            "right": 0,
            "width": 20,
          },
        ]
      }
    />
  </View>
</View>
`;
